--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-<meta http-equiv="refresh" content="0; url=/2-to-the-n/2048" />
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>2^n</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="shortcut icon" href="favicon.ico">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>2^n</h1>
+      <p>Select a grid size you want to play!</p>
+    </header>
+    <section>
+      <ul class="variants-list">
+        <li class="variant">
+          <a href="http://256.html"><strong>256</strong></a> (3x3)
+          by Naxyherd
+        </li>
+        <li class="variant original">
+          <a href="http://2048.html"><strong>2048</strong></a> (4x4)
+          by Gabiele Ciwulli
+        </li>
+        <li class="variant">
+          <a href="http://4096.html"><strong>4096</strong></a> (5x5)
+          by ishank26
+        </li>
+        <li class="variant">
+          <a href="http://8192.html"><strong>8192</strong></a> (6x6)
+          by TheReal128
+        </li>
+        <li class="variant">
+          <a href="http://16384.html"><strong>16384</strong></a> (7x7)
+          by TheReal96
+        </li>
+        <li class="variant">
+          <a href="http://32768.html"><strong>32768</strong></a> (8x8)
+          by aNNiMON
+        </li>
+        <li class="variant">
+          <a href="http://65536.html"><strong>65536</strong></a> (9x9)
+          by TheReal96
+        </li> 
+        <li class="variant">
+          <a href="http://131072.html"><strong>131072</strong></a> (10x10)
+          by TheReal96
+        </li> 
+        <li class="variant">
+          <a href="http://262144.html"><strong>262144</strong></a> (11x11)
+          by TheReal96
+        </li> 
+        <li class="variant">
+          <a href="http://1073741824.html"><strong>1073741824</strong></a> (12x12)
+          by TheReal96
+        </li> 
+              </ul>
+    </section>
+    <footer>
+      <hr />
+      <p class="credit">
+        Original 2048 created by <a href="http://gabrielecirulli.com">Gabriele Cirulli.</a>
+        These games created by <a href="http://github.com/TheReal96">TheReal96</a>
+      </p>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out 2048, a game where you join numbers to score high! #2048game" data-via="gabrielecirulli">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    </footer>
+  </div>
+</body>
+</html>
