--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </li>
         <li class="variant original">
           <a href="http://2048.html"><strong>2048</strong></a> (4x4)
-          by Gabiele Ciwulli
+          by Gabriele Cirulli
         </li>
         <li class="variant">
           <a href="http://4096.html"><strong>4096</strong></a> (5x5)
